--- a/src/style/page.scss
+++ b/src/style/page.scss
@@ -3,6 +3,7 @@
 	font-style: italic;
 }
 
+
 .todoApp{
     background: #F5F5F5;
     position: relative;
@@ -15,7 +16,7 @@
 		text-align: center;
 		margin: 0;
 		padding: 20px;
-		color: rgba(175, 47, 47, 0.6);
+		color: rgba(175, 47, 47, 0.3);
 		box-sizing: border-box;
 	}
 	.todoMain{
@@ -28,11 +29,11 @@
 	.todoInput{
 		display: flex;
 		align-items: center;
+		box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
 		.newTodo{
 		    padding: 16px;
 		    border: none;
 		    background: rgba(0, 0, 0, 0.003);
-		    box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
 		    position: relative;
 		    margin: 0;
 		    width: 100%;
@@ -57,24 +58,39 @@
 			}
 		}
 		
-		.toggle-icon{
-		    font-size: 20px;		
-		    color: #e6e6e6;
-		    padding: 10px;
+		.toggle-all{
+			font-size: 18px;		
+			color: #e6e6e6;
+			padding: 10px;
+			&.all-ckecked{
+				color: #888;
+			}
 		}
 	}
 
 	.todoFooter{
-		color: #777;
-		padding: 10px 15px;
-		height: 20px;
 		text-align: center;
 		font-size: 14px;
 		border-top: 1px solid #e6e6e6;
 		position: relative;
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
+		color: #777;
+		height: 40px;
+		line-height: 1em;
+		.todo-footer{
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			z-index: 5;
+			padding: 10px 15px;
+			height: 20px;
+			display: flex;
+			justify-content: space-between;
+			& > span{
+				display: inline-block;
+				line-height: 20px;
+			}
+		}
 		.todo-tabs{
 			display: flex;
 			justify-content: space-around;
@@ -83,7 +99,7 @@
 			padding: 0;
 			li{
 				margin: 4px;
-				padding: 4px 6px;
+				padding: 3px 5px;
 				border: 1px solid transparent;
 				border-radius: 3px;
 				cursor: pointer;
@@ -101,15 +117,76 @@
 				text-decoration: underline;
 			}
 		}
-		&:before {
-			content: '';
+		.footer-papers {
 			position: absolute;
-			right: 0;
 			bottom: 0;
 			left: 0;
-			height: 50px;
+			right: 0;
+			height: 20px;
 			overflow: hidden;
 			box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2), 0 8px 0 -3px #f6f6f6, 0 9px 1px -3px rgba(0, 0, 0, 0.2), 0 16px 0 -6px #f6f6f6, 0 17px 2px -6px rgba(0, 0, 0, 0.2);
+		}
+	}
+
+	.todoList{
+		position: relative;
+		z-index: 5;
+		border-top: 1px solid #e6e6e6;
+	}
+	.todoItem{
+		position: relative;
+		font-size: 24px;
+		border-bottom: 1px solid #ededed;
+		padding: 10px 10px 10px 0px;
+		min-height: 60px;
+		box-sizing: border-box;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		&:last-child{
+			border-bottom: none;
+		}
+		.toggle{
+			height: 40px;
+			width: 40px;
+			text-align: center;
+			margin: auto 0;
+			border: none;
+			-webkit-appearance: none;
+			&:after{
+				content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="-10 -18 100 135"><circle cx="50" cy="50" r="50" fill="none" stroke="#ededed" stroke-width="3"/></svg>')
+			}
+			&:checked:after{
+				content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="-10 -18 100 135"><circle cx="50" cy="50" r="50" fill="none" stroke="#bddad5" stroke-width="3"/><path fill="#5dc2af" d="M72 25L42 71 27 56l-4 4 20 20 34-52z"/></svg>')
+			}
+		}
+		.itemText{
+			flex: 1;
+			padding: 0 15px;
+			line-height: 1.2em;
+			white-space: pre-line;
+			word-break: break-all;
+			transition: color 0.3s;
+		}
+		&.completed{
+			.itemText{
+				color: #d9d9d9;
+    			text-decoration: line-through;
+			}
+		}
+		.close-item{
+			font-size: 12px;
+			font-weight: 600;
+			color: #cc9a9a;
+			display: inline-block;
+			padding: 10px;
+			transition: color 0.2s ease-in;
+			&:hover{
+				color: #af5b5e;
+			}
+			&.is_hidden{
+				visibility: hidden;
+			}
 		}
 	}
 }
