--- a/src/style/page.scss
+++ b/src/style/page.scss
@@ -159,6 +159,10 @@
 			&:checked:after{
 				content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="-10 -18 100 135"><circle cx="50" cy="50" r="50" fill="none" stroke="#bddad5" stroke-width="3"/><path fill="#5dc2af" d="M72 25L42 71 27 56l-4 4 20 20 34-52z"/></svg>')
 			}
+			&:checked + .itemText{
+				color: #d9d9d9;
+    			text-decoration: line-through;
+			}
 		}
 		.itemText{
 			flex: 1;
@@ -167,12 +171,6 @@
 			white-space: pre-line;
 			word-break: break-all;
 			transition: color 0.3s;
-		}
-		&.completed{
-			.itemText{
-				color: #d9d9d9;
-    			text-decoration: line-through;
-			}
 		}
 		.close-item{
 			font-size: 12px;
