--- a/src/style/page.scss
+++ b/src/style/page.scss
@@ -8,6 +8,7 @@
     background: #F5F5F5;
     position: relative;
 	min-height: 600px;
+	overflow: hidden;
 	box-sizing: border-box;
 	.todoTitle{
 	    width: 100%;
