svg改为字体图标

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,3 +19,5 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+@import url('//at.alicdn.com/t/font_1474754_rr4qr01bx5.css'); // 字体图标
